# CV

./: README.md
edge detection hough transform/: CMakeLists.txt  Lab04CV.cpp
equalization filtering morph/code/: CMakeLists.txt  Lab03CV.cpp  filter.cpp  filter.h
license plate recognition/code/: CMakeLists.txt  Classifier.cpp  Classifier.h  FinalProject.cpp  FindChar.cpp  FindChar.h  FindPlate.cpp  FindPlate.h
panoramic image/: CMakeLists.txt  Lab05CV.cpp  PanoramicImage.cpp  PanoramicImage.h
